Fix overflow of the illustration on medium screens

--- a/src/routes/style.css
+++ b/src/routes/style.css
@@ -179,7 +179,7 @@ ul {
 
 /* Media quiery */
 
-@media screen and (min-width: 60rem) {
+@media screen and (min-width: 72rem) {
 	:root {
 		--padding-inline-outer: 11.5vh;
 	}
